# cineforge

./: .gitattributes  .gitignore  LICENSE  README.md  Run.bat  keys.env.example  pyproject.toml  requirements.txt  run.sh  setup.ps1  setup.sh
data/: licenses.json  model_matrix.json
data/presets/: acestep15.json  ltx23_dev.json  wan22_a14b.json
docs/: ARCHITECTURE.md  INSTALL.md  LICENSES.md  MODELS.md  QUALITY_CEILING.md  TROUBLESHOOTING.md
scripts/: download_models.py  train_character_lora.py  verify_install.py
src/cineforge/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging_setup.py  scripts_verify.py
src/cineforge/agents/: __init__.py  base.py  casting.py  consistency.py  director.py  editor.py  producer.py  qa.py  screenwriter.py  sound_designer.py  storyboard.py
src/cineforge/backends/: __init__.py  base.py
src/cineforge/backends/enhance/: __init__.py  ffmpeg_master.py  flashvsr.py  gmfss_union.py  rife.py  seedvr2.py
src/cineforge/backends/image/: __init__.py  flux2.py  (+3 more)
src/cineforge/gui/: __init__.py  api.py  server.py
src/cineforge/hardware/: __init__.py  backend_select.py  benchmark.py  detect.py  vram_tier.py
src/cineforge/models/: __init__.py  comfy_client.py  comfy_server.py  downloader.py  licenses.py  matrix.py  registry.py
src/cineforge/pipeline/: __init__.py  asset_store.py  best_of_n.py  checkpoint.py  coordinator.py  stages.py
src/cineforge/state/: __init__.py  project.py  schema.py  store.py
tests/: conftest.py  test_agents_contract.py  test_backend_registry.py  test_best_of_n.py  test_checkpoint_resume.py  test_downloader_sizecheck.py  test_fixes.py  test_hardware_detect.py  test_license_gate.py  test_matrix_resolve.py  test_project_schema.py  test_setup.py  test_vram_tier.py
(+26 files in other folders)
